--- a/Decision Tree and Random Forest.ipynb
+++ b/Decision Tree and Random Forest.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Random Forest Project - LendingClub.com\n",
+    "# Decision Tree and Random Forest Project - LendingClub.com\n",
     "\n",
     "For this project we will be exploring publicly available data from [LendingClub.com](www.lendingclub.com). Lending Club connects people who need money (borrowers) with people who have money (investors). Hopefully, as an investor you would want to invest in people who showed a profile of having a high probability of paying you back. We will try to create a model that will help predict this.\n",
     "\n",
